syntax = "proto3";

package xmc.srv.core.task;

option go_package = "task";

import "github.com/xmc-dev/xmc/xmc-core/proto/searchmeta/searchmeta.proto";

service TaskService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc Search(SearchRequest) returns (SearchResponse) {}
}

message Task {
  string id = 1;
  string dataset_id = 2;
  string name = 4;
  string description = 3;
  string input_file = 5;
  string output_file = 6;
  string page_id = 7;
  string title = 8;
  string task_list_id = 9;
}

message CreateRequest {
  Task task = 1;
}

message CreateResponse {
  string id = 1;
}

message ReadRequest {
  string id = 1;
}

message ReadResponse {
  Task task = 1;
}

message GetRequest {
  string name = 1;
}

message GetResponse {
  Task task = 1;
}

message UpdateRequest {
  string id = 1;
  string dataset_id = 2;
  string description = 3;
  string name = 4;
  string input_file = 5;
  string output_file = 6;
  string title = 7;
  string task_list_id = 8;
}

message UpdateResponse {
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
}

message SearchRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  string dataset_id = 3;
  string name = 4;
  string description = 5;
  string title = 6;
  string task_list_id = 7;
}

message SearchResponse {
  repeated Task tasks = 1;
  xmc.srv.core.searchmeta.Meta meta = 2;
}
